--- a/vscode/.vscode-data-catalog-ui/launch.json
+++ b/vscode/.vscode-data-catalog-ui/launch.json
@@ -1,36 +1,24 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "UI Server",
-      "program": "${workspaceFolder}/node_modules/webpack-dev-server/bin/webpack-dev-server",
-      "args": [
-          "--config",
-          "${workspaceFolder}/webpack/dev.config.js",
-          "--colors",
-      ],
-      "console": "integratedTerminal",
-      "protocol": "legacy"
-    },
-    {
-      "name": "Chrome Debugger",
-      "type": "chrome",
-      "request": "launch",
-      "url": "http://localhost:8080/",
-      "webRoot": "${workspaceRoot}",
-      "sourceMaps": true,
-      "trace": true,
-    },
-  ],
-  "compounds": [
-    {
-      "name": "UI",
-      "configurations": ["UI Server", "Chrome Debugger"]
-    }
-  ]
-}
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+      // {
+      //   "type": "node",
+      //   "request": "launch",
+      //   "name": "UI",
+      //   "program": "${workspaceFolder}/node_modules/webpack-dev-server/bin/webpack-dev-server",
+      //   "runtimeArgs": [
+      //     "--inspect"
+      //   ],
+      //   "args": [
+      //       "--config",
+      //       "${workspaceFolder}/webpack/dev.config.js",
+      //       "--colors",
+      //   ],
+      //   "protocol": "legacy",
+      //   "console": "integratedTerminal",
+      // }
+    ]
+  }
