--- a/vscode/aladdin-studio/aladdin-studio-web-server/tasks.json
+++ b/vscode/aladdin-studio/aladdin-studio-web-server/tasks.json
@@ -4,9 +4,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "data-catalog-ui",
-      "type": "npm",
-      "script": "dev",
+      "label": "Go Web Server",
+      "type": "shell",
+      "command": "go run main.go",
       "problemMatcher": []
     }
   ]
